--- a/client/src/style.css
+++ b/client/src/style.css
@@ -31,6 +31,12 @@ body {
     background-color: rgba(255, 255, 255, 1);
 }
 
+.login-form {
+    padding: 20rem;
+    display: flex;
+    justify-content: center;
+}
+
 @page {
     margin: 1in;
 }
